fixed alignment of industry leaders

--- a/static/css/about-us.css
+++ b/static/css/about-us.css
@@ -82,6 +82,7 @@
 .leaders-details {
     display: flex;
     align-items: center;
+    justify-content: center;
     padding: 0 100px;
     gap: 24px;
     z-index: 10 !important;
